[gd_scene load_steps=7 format=3 uid="uid://dnm4uuj87m45b"]

[ext_resource type="Script" path="res://UI/UesrUI/GameOverUi.gd" id="1_ka5ri"]
[ext_resource type="PackedScene" uid="uid://bmhl3ws2bxob8" path="res://UI/Letter/Letter.tscn" id="2_gf28j"]
[ext_resource type="PackedScene" uid="uid://cnp83pgcf60s7" path="res://UI/Button/XButton.tscn" id="3_o28pk"]

[sub_resource type="Animation" id="Animation_x3mrp"]
resource_name = "AnimLock"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect/Lock:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_s18wn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect/Lock:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5v60l"]
_data = {
"AnimLock": SubResource("Animation_x3mrp"),
"RESET": SubResource("Animation_s18wn")
}

[node name="GameOverUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ka5ri")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 242.0
offset_right = 690.0
offset_bottom = 448.0
color = Color(0, 0, 0, 0.443137)

[node name="Letter" parent="ColorRect" instance=ExtResource("2_gf28j")]
scale = Vector2(2.55, 2.55)
layer_0/tile_data = PackedInt32Array(65537, 393216, 62, 65538, 0, 62, 65539, 786432, 62, 65540, 262144, 62, 65543, 1376256, 62, 65544, 262144, 62, 65545, 1114112, 62, 65542, 917504, 62, 196612, 1572864, 62, 196614, 1310720, 62, 196613, 917504, 62, 327684, 1441792, 62, 327685, 524288, 62, 327686, 851968, 62)

[node name="Back" parent="ColorRect" instance=ExtResource("3_o28pk")]
layout_mode = 0
offset_left = 27.695
offset_top = 314.0
offset_right = 173.695
offset_bottom = 342.0

[node name="Letter" parent="ColorRect/Back" instance=ExtResource("2_gf28j")]
visibility_layer = 8
position = Vector2(40.86, 6.33)
layer_0/tile_data = PackedInt32Array(0, 65536, 62, 1, 0, 62, 2, 131072, 62, 3, 655360, 62)

[node name="Replay" parent="ColorRect" instance=ExtResource("3_o28pk")]
layout_mode = 0
offset_left = 276.805
offset_top = 314.0
offset_right = 422.805
offset_bottom = 342.0

[node name="Letter" parent="ColorRect/Replay" instance=ExtResource("2_gf28j")]
position = Vector2(26.225, 6)
layer_0/tile_data = PackedInt32Array(0, 1114112, 62, 1, 262144, 62, 2, 983040, 62, 3, 720896, 62, 4, 0, 62, 5, 1572864, 62)

[node name="Next" parent="ColorRect" instance=ExtResource("3_o28pk")]
layout_mode = 0
offset_left = 155.04
offset_top = 365.0
offset_right = 301.04
offset_bottom = 393.0

[node name="Letter" parent="ColorRect/Next" instance=ExtResource("2_gf28j")]
position = Vector2(36.305, 4.61)
scale = Vector2(1.135, 1.135)
layer_0/tile_data = PackedInt32Array(0, 851968, 62, 1, 262144, 62, 2, 1507328, 62, 3, 1245184, 62)

[node name="Lock" type="ColorRect" parent="ColorRect"]
visible = false
layout_mode = 0
offset_left = 174.0
offset_top = 262.0
offset_right = 277.0
offset_bottom = 302.0
color = Color(1, 0, 0, 1)

[node name="Letter" parent="ColorRect/Lock" instance=ExtResource("2_gf28j")]
position = Vector2(13.92, 8.84)
scale = Vector2(1.22, 1.22)
layer_0/tile_data = PackedInt32Array(0, 720896, 62, 1, 917504, 62, 2, 131072, 62, 3, 655360, 62)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5v60l")
}

[connection signal="button_down" from="ColorRect/Back" to="." method="_on_back_button_down"]
[connection signal="button_down" from="ColorRect/Replay" to="." method="_on_replay_button_down"]
[connection signal="button_down" from="ColorRect/Next" to="." method="_on_next_button_down"]
